--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,6 +36,9 @@ section#login{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.332);
+
+    transition: width 0.9s, height 0.9s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
