--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,7 +32,7 @@ section#login{
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.332);
@@ -64,3 +64,53 @@ div#formulario > p{
     font-size: 0.8rem;
     margin-bottom: 10px;
 }
+
+form > div.campo{
+    display: block;
+    background-color: #5f2c82;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
+}
+
+form [type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form [type=submit]:hover{
+    background-color: #357471;
+    transition: 0.6s;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #fefefe;
+    color: #3e8783;
+    border: 1px solid #4fafaa;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 5px;
+}
+
+form > a.botao:hover{
+    background-color: #5de0d9;
+    transition: 0.6s;
+}
+
