--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,54 +1,53 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+  body {
+    background-image: linear-gradient(to top, #49a09d, #5f2c82);
+  }
 
-    body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
-    }
-    
-    section#login{
-        width: 80vw;
-    }
+  section#login {
+    width: 80vw;
+    height: 300px;
+  }
 
-    section#login > div#imagem{
-        float: left;
-        width: 30%;
-        height: 100%;
-    }
+  section#login > div#imagem {
+    float: left;
+    width: 30%;
+    height: 100%;
+  }
 
-    section#login > div#formulario{
-        float: right;
-        width: 70%;
-    }
+  section#login > div#formulario {
+    float: right;
+    width: 70%;
+  }
 }
 
 @media screen and (min-width: 993px) {
+  body {
+    background-image: linear-gradient(to top, #49a09d, #5f2c82);
+  }
 
-    body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
-    }
+  section#login {
+    width: 950px;
+    height: 350px;
+  }
 
-    section#login{
-        width: 950px;
-    }
+  section#login > div#imagem {
+    float: right;
+    width: 50%;
+    height: 100%;
+  }
 
-    section#login > div#imagem{
-        float: right;
-        width: 50%;
-        height: 100%;
-    }
+  section#login > div#formulario {
+    float: left;
+    width: 50%;
+  }
 
-    section#login > div#formulario{
-        float: left;
-        width: 50%;
-    }
+  div#formulario > h1 {
+    font-size: 2rem;
+  }
 
-    div#formulario > h1{
-    font-size: 2.0rem;
-    }
-
-    div#formulario > p{
+  div#formulario > p {
     font-size: 1.2rem;
-    }
-    
+  }
 }
