--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,111 +6,136 @@ Verde: #49a09d
 Lilás: #5f2c82
 */
 
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
 }
 
-html, body{
-    background-color: #5f2c82;
-    height: 100vh;
-    width: 100vw;
+html,
+body {
+  background-color: #5f2c82;
+  height: 100vh;
+  width: 100vw;
 }
 
-main{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
+main {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
 }
 
-section#login{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    width: 250px;
-    height: 515px;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.332);
-
-    transition: width 0.9s, height 0.9s;
-    transition-timing-function: ease;
+section#login {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  width: 250px;
+  height: 515px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.332);
+  transform: translate(-50%, -50%);
+  transition: width 0.9s, height 0.9s;
+  transition-timing-function: ease;
 }
 
-section#login > div#imagem{
-    display: block;
-    background-image: url(../imagens/pattern.jpg);
-    height: 200px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-size: left bottom;
+section#login > div#imagem {
+  display: block;
+  background-image: url(../imagens/pattern.jpg);
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: left bottom;
 }
 
-section#login > div#formulario{
-    display: block;
-    padding: 10px;
+section#login > div#formulario {
+  display: block;
+  padding: 10px;
 }
 
-div#formulario > h1{
-    text-align: center;
-    margin-bottom: 10px;
+div#formulario > h1 {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-div#formulario > p{
-    font-size: 0.8rem;
-    margin-bottom: 10px;
+div#formulario > p {
+  font-size: 0.8rem;
+  margin-bottom: 10px;
 }
 
-form > div.campo{
-    display: block;
-    background-color: #5f2c82;
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    margin: 5px 0px;
+form > div.campo {
+  display: block;
+  background-color: #5f2c82;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  margin: 5px 0px;
+  border: 2px solid #5f2c82;
 }
 
-div.campo > label{
-    display: none;
+div.campo > label {
+  display: none;
 }
 
-form [type=submit]{
-    display: block;
-    font-size: 1em;
-    width: 100%;
-    height: 40px;
-    background-color: #49a09d;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+div.campo > span {
+  color: white;
+  /*background-color: black;*/
+  font-size: 2rem;
+  height: 40px;
+  padding: 5px;
 }
 
-form [type=submit]:hover{
-    background-color: #357471;
-    transition: 0.6s;
+div.campo > input {
+  background-color: #76eae4;
+  font-size: 1em;
+  width: calc(100% - 48px);
+  height: 100%;
+  border: 0px;
+  border-radius: 8px;
+  padding: 4px;
+  transform: translateY(-12px);
 }
 
-form > a.botao{
-    display: block;
-    text-align: center;
-    font-size: 1em;
-    width: 100%;
-    height: 40px;
-    background-color: #fefefe;
-    color: #3e8783;
-    border: 1px solid #4fafaa;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 5px;
+div.campo > :focus-within {
+  background-color: white;
 }
 
-form > a.botao:hover{
-    background-color: #5de0d9;
-    transition: 0.6s;
+form [type="submit"] {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #49a09d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
+form [type="submit"]:hover {
+  background-color: #357471;
+  transition: 0.6s;
+}
+
+form > a.botao {
+  display: block;
+  text-align: center;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #fefefe;
+  color: #3e8783;
+  border: 1px solid #4fafaa;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-top: 5px;
+}
+
+form > a.botao:hover {
+  background-color: #5de0d9;
+  transition: 0.6s;
+  color: black;
+}
